--- a/tweet_classification_app/package.json
+++ b/tweet_classification_app/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "alasql": "^0.4.5",
     "ejs": "2.3.4",
-    "grunt": "1.0.1",
+    "grunt": "^1.0.3",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
     "grunt-contrib-concat": "1.0.1",
@@ -16,13 +16,13 @@
     "grunt-contrib-jst": "1.0.0",
     "grunt-contrib-less": "1.3.0",
     "grunt-contrib-uglify": "1.0.1",
-    "grunt-contrib-watch": "1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.5.2",
+    "grunt-sync": "^0.8.0",
     "include-all": "^1.0.0",
-    "leaflet": "^1.3.1",
-    "leaflet.markercluster": "^1.3.0",
-    "rc": "1.0.1",
+    "leaflet": "0.7.7",
+    "leaflet.markercluster": "0.5.0",
+    "rc": "^1.2.8",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.3",
